# CLASSIC-Fallout4

./: CLASSIC Changelog.md  CLASSIC_Interface2.py  CLASSIC_Main.py  CLASSIC_ScanGame.py  CLASSIC_ScanLogs.py  CLASSIC_ScanLogs2.py  pyproject.toml
CLASSIC Data/databases/: CLASSIC Fallout4.yaml  CLASSIC Main.yaml
